<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="main_screen_button_search">Поиск</string>
    <string name="main_screen_button_library">Медиатека</string>
    <string name="main_screen_button_settings">Настройки</string>
    <string name="settings_screen_title">Настройки</string>
    <string name="settings_screen_item_dark_theme">Тёмная тема</string>
    <string name="settings_screen_item_share">Поделиться приложением</string>
    <string name="settings_screen_item_support">Написать в поддержку</string>
    <string name="settings_screen_item_user_agreement">Пользовательское соглашение</string>
    <string name="search_screen_title">Поиск</string>
    <string name="search_screen_search_bar_hint">Поиск</string>
    <string name="settings_screen_item_share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_screen_item_support_mailto">mozg1303@yandex.ru</string>
    <string name="settings_screen_item_support_subj">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_screen_item_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_screen_item_user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_screen_stub_nothing_found_primary_text">Ничего не нашлось</string>
    <string name="search_screen_stub_nothing_found_secondary_text"></string>
    <string name="search_screen_stub_connection_problem_primary_text">Проблемы со связью</string>
    <string name="search_screen_stub_connection_problem_secondary_text">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_screen_stub_update_button_text">Обновить</string>
    <string name="search_screen_search_history_title">Вы искали</string>
    <string name="search_screen_clear_search_history_button_label">Очистить историю</string>

    <string name="DefaultPlayProgress.AudioPlayerScreen.PlaylistMaker">00:00</string>
    <string name="TrackTime.AudioPlayerScreen.PlaylistMaker">Длительность</string>
    <string name="CollectionName.AudioPlayerScreen.PlaylistMaker">Альбом</string>
    <string name="ReleaseDate.AudioPlayerScreen.PlaylistMaker">Год</string>
    <string name="PrimaryGenreName.AudioPlayerScreen.PlaylistMaker">Жанр</string>
    <string name="Country.AudioPlayerScreen.PlaylistMaker">Страна</string>
</resources>