<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_screen_background_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_screen_toolbar_layout_height"
        android:layout_marginStart="@dimen/settings_screen_toolbar_layout_marginStart"
        android:layout_marginBottom="@dimen/settings_screen_toolbar_layout_marginBottom"
        app:title="@string/settings_screen_title"
        app:titleTextAppearance="@style/settings_screen_title"
        app:titleTextColor="@color/settings_screen_title_color"
        app:titleMarginStart="@dimen/settings_screen_toolbar_titleMarginStart"
        app:titleMarginTop="@dimen/settings_screen_toolbar_titleMarginTop" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/settings_screen_item"
        android:layout_width="match_parent"
        android:text="@string/settings_screen_item_dark_theme"
        android:layout_marginStart="@dimen/settings_screen_item_layout_marginStart"
        android:layout_marginEnd="@dimen/settings_screen_item_layout_marginEnd"
        app:thumbTint="@color/settings_screen_switch_thumb_colors"
        app:trackTint="@color/settings_screen_switch_track_colors" />

    <TextView
        android:id="@+id/share"
        style="@style/settings_screen_item"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/settings_screen_item_layout_marginStart"
        android:layout_marginEnd="@dimen/settings_screen_item_layout_marginEnd"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/settings_screen_item_share" />

    <TextView
        android:id="@+id/support"
        style="@style/settings_screen_item"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/settings_screen_item_layout_marginStart"
        android:layout_marginEnd="@dimen/settings_screen_item_layout_marginEnd"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/settings_screen_item_support" />

    <TextView
        android:id="@+id/user_agreement"
        style="@style/settings_screen_item"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/settings_screen_item_layout_marginStart"
        android:layout_marginEnd="@dimen/settings_screen_item_layout_marginEnd"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/settings_screen_item_user_agreement"
        android:layout_marginBottom="476dp"/>

</LinearLayout>