<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        style="@style/PanelHeader.PlaylistMaker"
        app:title="@string/search_screen_title" />

    <!-- Search Bar + Clear Button -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp" >

        <EditText
            android:id="@+id/search_bar"
            style="@style/SearchField.PlaylistMaker"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/clear_search_bar_button"
            style="@style/ClearButton.SearchField.PlaylistMaker"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_clear_button"
            tools:visibility="visible"/>
    </FrameLayout>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Track Search Results -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <!-- Track History -->
    <LinearLayout
        android:id="@+id/track_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >
        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />
        <TextView
            style="@style/OneLine.Lists.PlaylistMaker"
            android:text="@string/search_screen_search_history_title" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_history_track_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_tracks_history_button"
            style="@style/SmallButton.Buttons.PlaylistMaker"
            android:layout_gravity="center"
            android:text="@string/search_screen_clear_search_history_button_label" />
    </LinearLayout>

    <!-- Stubs -->
    <LinearLayout
        android:id="@+id/stub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >
        <Space
            android:layout_width="match_parent"
            android:layout_height="86dp" />
        <ImageView
            android:id="@+id/stub_image"
            android:layout_width="@dimen/search_screen_stub_image_size"
            android:layout_height="@dimen/search_screen_stub_image_size"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/stub_primary_text"
            style="@style/OneLine.Lists.PlaylistMaker" />
        <TextView
            android:id="@+id/stub_secondary_text"
            style="@style/OneLine.Lists.PlaylistMaker" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_screen_stub_update_button"
            style="@style/SmallButton.Buttons.PlaylistMaker"
            android:layout_gravity="center"
            android:text="@string/search_screen_stub_update_button_text" />
    </LinearLayout>

</LinearLayout>